# MyNotes

./: .gitignore  Cargo.toml  README.md
.devcontainer/: .ideavimrc  devcontainer.json
.github/workflows/: ci.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/editor-core/: Cargo.toml
crates/editor-core/src/: cursor.rs  enums.rs  errors.rs  history.rs  lib.rs  text.rs
crates/editor-core/src/line_index/: btree.rs  line_iter.rs  line_summary.rs  mod.rs  node.rs  search_cache.rs
crates/editor-core/src/piece_table/: mod.rs  piece.rs  table.rs
crates/editor-state/: Cargo.toml
crates/editor-state/src/: document.rs  lib.rs
crates/io/: Cargo.toml
crates/io/src/: mmap.rs
crates/layout/: Cargo.toml
crates/renderer/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/util/: Cargo.toml
