[package]
name = "MyNotes"
version = "0.0.1"
readme = "README.md"
publish = false
license-file = "LICENSE"

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
fltk = { version = "1.5.22", features = ["no-images", "no-pango"] }
tempfile = "3.25.0"
